--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,13 @@ body {
 
 .curriculum-calendar {
   display: flex;
+  flex-wrap: wrap;
 }
 
-h1,
-h3 {
+h1, h3 {
   color: #2c3e50;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 h1 {
@@ -25,20 +25,18 @@ h1 {
 
 .main-container {
   display: flex;
+  flex-wrap: wrap;
   max-width: 100%;
   margin: 2rem auto;
+  padding: 1rem;
   overflow-x: hidden;
 }
 
 .left-panel {
-  /* flex: 1;
+  flex: 1;
+  width: 25%;
   padding: 1rem;
-  background-color: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  
-  overflow-y: auto; */
-  max-width: 25%;
+  box-sizing: border-box;
   display: grid;
   gap: 20px;
 }
@@ -54,10 +52,17 @@ h1 {
 
 .right-panel {
   flex: 2;
-
-  /* max-height: 80vh;
-  overflow-y: auto; */
+  max-width: 75%;
   margin-left: 1rem;
+  box-sizing: border-box;
+ 
+  margin-top: 20;
+  padding: "20px";
+  background-color: "#fff";
+  color: "#000";
+  width: "100%";
+  box-sizing: "border-box";
+
 }
 
 .journey-container {
@@ -119,15 +124,10 @@ button:hover {
 .journey-details {
   display: grid;
   padding: 1rem;
-  overflow-x: auto;
   gap: 1rem;
-  max-height: 80vh;
-  overflow-y: auto;
   background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  /* max-height: 80vh;
-  overflow-y: auto; */
 }
 
 .journey-card {
@@ -218,6 +218,7 @@ input[type="date"] {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 1rem;
+  flex-wrap: wrap;
 }
 
 .key-metrics .metric-box {
@@ -226,23 +227,10 @@ input[type="date"] {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 1rem;
   text-align: center;
-  width: 48%;
+  width: calc(50% - 1rem);
+  margin-bottom: 1rem;
 }
 
-@media (max-width: 1200px) {
-  .main-container {
-    flex-direction: row;
-    gap: 1rem;
-  }
-
-  .right-panel {
-    max-width: 70%;
-  }
-
-  .left-panel {
-    max-width: 30%;
-  }
-}
 
 @media (max-width: 768px) {
   .main-container {
@@ -257,28 +245,6 @@ input[type="date"] {
     width: 100%;
     margin-bottom: 1rem;
   }
-}
-
-@media (max-width: 600px) {
-  .main-container {
-    flex-direction: column;
-  }
-
-  .calendar {
-    padding: 1rem;
-  }
-
-  button {
-    width: 100%;
-    padding: 1rem;
-  }
-
-  .journey-card {
-    min-width: 100%;
-  }
-}
-/* Estilos para telas pequenas (celulares) */
-@media only screen and (max-width: 767px) {
   .theme-selection {
     flex-direction: column;
   }
@@ -292,15 +258,12 @@ input[type="date"] {
     grid-template-columns: 1fr;
     gap: 10px;
   }
-}
-
-/* Estilos para telas maiores (tablets e desktops) */
-@media only screen and (min-width: 768px) {
-  .checkbox-group {
-    grid-template-columns: repeat(2, 1fr);
+  .curriculum-calendar{
+    display: grid;
   }
 
-  .curriculum-calendar {
-    flex-direction: row;
+  .left-panel{
+    width: 100%;
   }
 }
+
